--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,23 +1,29 @@
 /**index.wxss**/
-page{
-  background-color: #F2F2F2;
+Page{
+  background-color: #D9C9BA;
 }
-.card {
-  background-color: #ffffff;
-  margin: 70rpx 60rpx;
-  padding:30rpx;
-  height:850rpx;
-  text-align: center;
-  box-shadow: 5px 5px 5px #888888;
+
+.card-swiper{
+  height: 1000rpx;
 }
-.content{
-  margin: 20rpx 10rpx;
+
+.swiper-item{
+  margin: 30rpx;
+  background-color: white;
+  padding: 50rpx;
+  display: flex !important;
+  flex-direction: column;
+  align-items: flex-end; 
+}
+
+.swiper-item-title{
+  height: 400rpx;
+  font-size: 48rpx;
+  writing-mode: vertical-rl;
+  margin-top:50rpx;
+  font-family: "Bitstream Vera Serif Bold";
+}
+
+.swiper-item-preview{
   font-size: 32rpx;
-  text-align: left;
-}
-.from{
-  margin-top: 30rpx;
-  font-size:24rpx;
-  text-align:right;
-  font-style:italic;
 }
