--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,5 @@
 /**index.wxss**/
+
 Page{
   background-color: #D9C9BA;
 }
@@ -21,7 +22,7 @@ Page{
   font-size: 48rpx;
   writing-mode: vertical-rl;
   margin-top:50rpx;
-  font-family: "Bitstream Vera Serif Bold";
+  font-family: "chi-font";
 }
 
 .swiper-item-preview{
