--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,9 +1,27 @@
 <!--index.wxml-->
-<swiper class="card-swiper {{DotStyle?'square-dot':'round-dot'}}" circular="true" interval="5000" duration="500" bindchange="cardSwiper">
+<swiper class="card-swiper {{DotStyle?'square-dot':'round-dot'}}"  interval="5000" duration="500" bindchange="cardSwiper">
+
   <swiper-item wx:for="{{swiperList}}" wx:key class="{{cardCur==index?'cur':''}}">
     <view class="swiper-item">
-      <view class="swiper-item-title">{{item.title}}</view>
-      <view class="swiper-item-preview">{{item.preview}}</view>
+      <view class='swiper-item-top'>
+        <view class="swiper-item-calen">
+          <text class="swiper-item-calen-date">{{item.date}}</text>
+          <view>
+            <text class='swiper-item-calen-week'>{{item.weekday}}</text>
+            <text class='swiper-item-calen-lunar'>{{item.lunar}}</text>
+          </view>
+        </view>
+        <view class="swiper-item-title">
+          <view>{{item.title}}</view>
+          <text>【{{item.dynasty}}】{{item.author}}</text>
+        </view>
+      </view>
+      <view class="swiper-item-preview">{{item.article}}</view>
+      <view class="swiper-item-operation">
+        <text class="favor {{item.like?'icon-favorfill':'icon-favor'}}" bindtap="clickFavor"></text>
+        <text>{{item.like_count}} 喜欢</text>
+        <button class="cu-btn  bg-brown button-hover" role="button" bindtap="clickRead">阅读</button>
+      </view>
     </view>
   </swiper-item>
 </swiper>
