--- a/pages/index4/index4.wxml
+++ b/pages/index4/index4.wxml
@@ -23,9 +23,21 @@
     </navigator>
   </view>
   <view class="cu-item arrow">
+    <navigator class="content" hover-class="none" url="follow" open-type="navigate">
+      <text class="icon-friendfill text-orange"></text>
+      <text class="text-grey">我的关注</text>
+    </navigator>
+  </view>
+  <view class="cu-item arrow">  <!-- 这里设置成 “按钮的形式” -->
     <navigator class="content" hover-class="none" url="about" open-type="navigate">
       <text class="icon-discoverfill text-orange"></text>
-      <text class="text-grey">关于一见</text>
+      <text class="text-grey">夜间模式</text>
+    </navigator>
+  </view>
+  <view class="cu-item arrow">
+    <navigator class="content" hover-class="none" url="about" open-type="navigate">
+      <text class="icon-discoverfill text-orange"></text>
+      <text class="text-grey">关于我们</text>
     </navigator>
   </view>
 </view>
