--- a/pages/index4/schedule.wxss
+++ b/pages/index4/schedule.wxss
@@ -3,3 +3,12 @@
   margin: 30px;
   text-align: center;
 }
+
+.card {
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+    background-color: #ffffff;
+    box-shadow: 4px 1px 1px #cccccc;
+    margin: 8px;
+    position: relative;
+}
