--- a/pages/words/words_index.wxml
+++ b/pages/words/words_index.wxml
@@ -1,14 +1,24 @@
 <!--words_index.wxml-->
-<view class="intro">
+<view class="word_index_container">
+
+  <view> 
+
+    <wux-tabs  defaultCurrent="tab1">
+      <wux-tab key="tab1" title="完成度"></wux-tab>
+      <wux-tab key="tab2" title="打卡日历"></wux-tab>
+    </wux-tabs>
   
- <wux-tabs defaultCurrent="tab1">
-    <wux-tab key="tab1" title="完成度"></wux-tab>
-    <wux-tab key="tab2" title="打卡日历"></wux-tab>
-  </wux-tabs>
 
-  <view class="circle">
-  <wux-circle percent="50" sAngle = "270" size = "240" strokeWidth="15" color="#D9C9BA">{{ 50 + '%' }}</wux-circle>
+    <view class="word_index_status">
+    <wux-circle percent="23" sAngle = "270" size = "350" strokeWidth="20" color="#D9C9BA">
+    {{ 23 + '%' }}
+    </wux-circle>
+    
+    
+    
+    </view>
   </view>
-
-  <button role="button" bindtap="clickStudy">开始学习</button>
+  
+  <button class="word_start_study" role="button" bindtap="clickStudy">开始学习</button>
+  
 </view>
