--- a/pages/index4/index4.wxss
+++ b/pages/index4/index4.wxss
@@ -9,3 +9,10 @@
 .username {
   text-align: center;
 }
+
+
+/*swtich整体大小及背景色*/
+.wx-switch-input{
+    background: #403124 !important;
+    border: #403124 !important; /* 2018-07-18 重置开关边框颜色 */
+}
