--- a/pages/index4/index4.wxml
+++ b/pages/index4/index4.wxml
@@ -11,6 +11,12 @@
     </navigator>
   </view>
   <view class="cu-item arrow">
+    <navigator class="content" hover-class="none" url="settings" open-type="navigate">
+      <text class="icon-settings text-orange"></text>
+      <text class="text-grey">学习设置</text>
+    </navigator>
+  </view>
+  <view class="cu-item arrow">
     <navigator class="content" hover-class="none" url="curve" open-type="navigate">
       <text class="icon-fork text-orange"></text>
       <text class="text-grey">记忆曲线</text>
