--- a/pages/index4/curve.wxml
+++ b/pages/index4/curve.wxml
@@ -1,16 +1,3 @@
 <!--pages/index4/curve.wxml-->
-<view style="margin: 30px;text-align: center;">记忆曲线</view>
+<view style="margin: 20px;text-align: left;">人的遗忘是有规律的，我们使用著名的艾宾浩斯遗忘曲线来帮助你更好地学习文言文。在每天的学习任务中，我们会将你学过的词汇和当天需要学习的词汇混合在一起。我们将与你一同对抗遗忘。</view>
 
-<block>
-  <button wx:for="{{setting}}">
-    <view class="flex-wrp" style="flex-direction:row;">
-      <view class="flex-item bc_green">{{item.days}}</view>
-    </view>
-  </button>
-</block>
-
-这里之后甚至可以放一些学习曲线的图，以及对于学习曲线进行一些解释。
-
-<navigator class="content" hover-class="none" open-type="navigateBack">
-      <button>返回</button>
-</navigator>
