--- a/pages/index4/schedule.wxml
+++ b/pages/index4/schedule.wxml
@@ -3,33 +3,31 @@
 
 <!-- 这里先用一个折线图给出最近的学习情况记录，下面是一些卡片 -->
 
-<canvas canvas-id='lineCanvas'></canvas>
+
+
+<canvas canvas-id='lineCanvas' disable-scroll='false' style='width:{{canvasWidth}}px; height:{{canvasHeight}}px' bindtouchstart="touchHandler"></canvas>
 
 <view class='margin-bottom'></view>
 
-<block>
-  <button wx:for="{{section}}" class='margin'>
-    <view class="flex-wrp" style="flex-direction:row;">
-      <view class="flex-item bc_green">{{item.name}}</view>
+<!-- <block wx:for="{{section}}" class='margin'>
+
+  <view class="cu-bar bg-white solid-bottom margin-top">
+    <view class="action">
+      <text class="cuIcon-title text-blue"></text>{{item.name}}
     </view>
-    <progress percent='{{item.progress}}' color='#D9C9BA'></progress>
-  </button>
-</block>
-
-<!--
-<navigator class="content" hover-class="none" open-type="navigateBack">
-      <button>返回</button>
-</navigator>
--->
-
-<scroll-view scroll-y class="scrollPage">
-  <!-- <image src='/images/BasicsBg.png' mode='widthFix' class='png' style='width:100%;height:486rpx'></image> -->
-  <view class='nav-list'>
-    <navigator open-type="navigate" hover-class='none' wx:for="{{section}}" class="nav-li">
-      <view class="nav-title">{{item.name}}</view>
-      <view class="nav-name">{{item.progress}}</view>
-      <text class='cuIcon-{{item.icon}}'></text>
-    </navigator>
   </view>
-  <view class='cu-tabbar-height'></view>
-</scroll-view>
+  <view class="padding bg-white ">
+    <view class="flex">
+      <view class="cu-progress round">
+        <view class="bg-green" style="width:{{item.progress}};"></view>
+      </view>
+      <text class="cuIcon-roundcheckfill text-green margin-left-sm"></text>
+    </view>
+    <view class="flex margin-top">
+      <view class="cu-progress round">
+        <view class="bg-green" style="width:{{loading?'80%':''}};"></view>
+      </view>
+      <text class="margin-left">80%</text>
+    </view>
+  </view>
+</block> -->
