--- a/pages/words/words_index.wxml
+++ b/pages/words/words_index.wxml
@@ -1,24 +1,24 @@
 <!--words_index.wxml-->
 <view class="word_index_container">
 
-  <view> 
-
-    <wux-tabs  defaultCurrent="tab1">
+  <view class="word_index_tabs">
+    <wux-tabs  defaultCurrent="tab1" theme="dark">
       <wux-tab key="tab1" title="完成度"></wux-tab>
       <wux-tab key="tab2" title="打卡日历"></wux-tab>
     </wux-tabs>
-  
-
-    <view class="word_index_status">
-    <wux-circle percent="23" sAngle = "270" size = "350" strokeWidth="20" color="#D9C9BA">
-    {{ 23 + '%' }}
-    </wux-circle>
-    
-    
-    
-    </view>
   </view>
   
-  <button class="word_start_study" role="button" bindtap="clickStudy">开始学习</button>
-  
+  <view class="word_index_circle">
+    <wux-white-space />
+    <wux-white-space />
+    <wux-circle percent="{{precent}}" sAngle = "270" size="{{winWidth * 0.8}}" strokeWidth="20" color="#D9C9BA" backgroundColor="#e5e5e5">
+    {{ precent + '%'}} 
+    </wux-circle>
+  </view>
+
+
+  <view class="add_start_btn">
+    <button class="word_start_study" role="button" bindtap="clickStudy">开始学习</button>
+  </view>
+
 </view>
