--- a/pages/index3/index3.wxml
+++ b/pages/index3/index3.wxml
@@ -1,2 +1,7 @@
 <!--pages/index3/index3.wxml-->
 <view class="intro">备用</view>
+<button bindtap='connectLocal'>测试后端接口</button>
+<button bindtap='testLogin'>查看用户信息</button>
+<button open-type='getUserInfo' bindgetuserinfo="bindGetUserInfo">测试登陆</button>
+
+
