--- a/pages/index4/favor.wxml
+++ b/pages/index4/favor.wxml
@@ -1,60 +1,64 @@
 <!--pages/index4/favor.wxml-->
 <cu-custom bgColor="bg-gradual-blue" isBack="{{true}}"><view slot="backText">返回</view><view slot="content">我的收藏</view></cu-custom>
-<scroll-view scroll-x class="bg-white nav text-center fixed" style="top:{{CustomBar}}px">
-  <view class="cu-item {{index==TabCur?'text-brown cur':''}}" wx:for="{{tabNav}}" wx:key bindtap='tabSelect' data-id="{{index}}">
-    {{tabNav[index]}}
-  </view>
-</scroll-view>
 
-<text class='margin-top'></text>
+<view class="class_first" bindtouchstart="touchStart" bindtouchend="touchEnd">
 
-<block wx:if="{{TabCur==0}}">
-  <!-- <button wx:for="{{learn}}">
-    <view class="flex-wrp" style="flex-direction:row;">
-      <view class="flex-item bc_green">{{item.name}} （出自 {{item.from_which}}）</view>
+  <scroll-view scroll-x class="bg-white nav text-center fixed" style="top:{{CustomBar}}px">
+    <view class="cu-item {{index==TabCur?'text-brown cur':''}}" wx:for="{{tabNav}}" wx:key bindtap='tabSelect' data-id="{{index}}">
+      {{tabNav[index]}}
     </view>
-  </button> -->
-  <block wx:for="{{yijuList}}">
-    <navigator open-type="navigate" hover-class='navigator-hover' url="/pages/index/article?cardCur=0">
-      <view class="cu-bar bg-white solid-bottom margin-top">
-        <view class="action">
-          <text class="cuIcon-title left">{{item.title}}</text>
-          <text text-align='right'>【{{item.dynasty}}】{{item.author}}</text>
-        </view>
-      </view>
-      <view class="padding bg-white">
-        <view class="flex flex-wrap">
-          <view class="swiper-item-preview">{{item.article}}</view>
-        </view>
-      </view>
-    </navigator>
-  </block>
-</block>
+  </scroll-view>
 
-<block wx:if="{{TabCur==1}}">
-  <block wx:for="{{learn}}">
-    <navigator open-type="navigate" hover-class='navigator-hover' url="/pages/index/article?cardCur=0">
-      <view class="cu-bar bg-white solid-bottom margin-top">
-        <view class="action">
-          <text class="cuIcon-title left">{{item.name}} \n</text>
-          <view class="swiper-item-preview">（《{{item.from_which}}》）</view>
-          <!-- <text text-align='right'>{{item.from_which}}</text> -->
-        </view>
-      </view>
-      <!-- <view class="padding bg-white">
-        <view class="flex flex-wrap">
-          <view class="swiper-item-preview">出自《{{item.from_which}}》</view>
-        </view>
-      </view> -->
-    </navigator>
-  </block>
-</block>
+  <text class='margin-top'></text>
 
-<block wx:if="{{TabCur==2}}">
-  字典收藏
-  <button wx:for="{{vocab}}">
-    <view class="flex-wrp" style="flex-direction:row;">
-      <view class="flex-item bc_green">{{item.name}} "出自" {{item.from_which}}</view>
-    </view>
-  </button>
-</block>
+  <block wx:if="{{TabCur==0}}">
+    <!-- <button wx:for="{{learn}}">
+      <view class="flex-wrp" style="flex-direction:row;">
+        <view class="flex-item bc_green">{{item.name}} （出自 {{item.from_which}}）</view>
+      </view>
+    </button> -->
+    <block wx:for="{{yijuList}}">
+      <navigator open-type="navigate" hover-class='navigator-hover' url="/pages/index/article?cardCur=0">
+        <view class="cu-bar bg-white solid-bottom margin-top">
+          <view class="action">
+            <text class="cuIcon-title left">{{item.title}}</text>
+            <text text-align='right'>【{{item.dynasty}}】{{item.author}}</text>
+          </view>
+        </view>
+        <view class="padding bg-white">
+          <view class="flex flex-wrap">
+            <view class="swiper-item-preview">{{item.article}}</view>
+          </view>
+        </view>
+      </navigator>
+    </block>
+  </block>
+
+  <block wx:if="{{TabCur==1}}">
+    <block wx:for="{{learn}}">
+      <navigator open-type="navigate" hover-class='navigator-hover' url="/pages/index/article?cardCur=0">
+        <view class="cu-bar bg-white solid-bottom margin-top">
+          <view class="action">
+            <text class="cuIcon-title left">{{item.name}} \n</text>
+            <view class="swiper-item-preview">（《{{item.from_which}}》）</view>
+            <!-- <text text-align='right'>{{item.from_which}}</text> -->
+          </view>
+        </view>
+        <!-- <view class="padding bg-white">
+          <view class="flex flex-wrap">
+            <view class="swiper-item-preview">出自《{{item.from_which}}》</view>
+          </view>
+        </view> -->
+      </navigator>
+    </block>
+  </block>
+
+  <block wx:if="{{TabCur==2}}">
+    字典收藏
+    <button wx:for="{{vocab}}">
+      <view class="flex-wrp" style="flex-direction:row;">
+        <view class="flex-item bc_green">{{item.name}} "出自" {{item.from_which}}</view>
+      </view>
+    </button>
+  </block>
+</view>
