modify word_index page

--- a/pages/words/words_index.wxml
+++ b/pages/words/words_index.wxml
@@ -19,17 +19,17 @@
   <view class="word_index_task">
     <view class='status'>
       <wux-icon type='ios-radio-button-on' color="#ffffff" size="20"/> 
-      <text>200</text>
+      <text>{{word_learing}}</text>
       <text>学习中词汇</text>
     </view>
     <view class='status'>
       <wux-icon type='ios-checkmark-circle' color="#ffffff" size="20"/>
-      <text>200</text>
+      <text>{{word_learned}}</text>
       <text>已学习词汇</text>
     </view>
     <view class='status'>
       <wux-icon type='ios-close-circle' color="#ffffff" size="20"/>
-      <text>200</text> 
+      <text>{{word_unlearn}}</text> 
       <text>未学习词汇</text>
     </view>
   </view>
