--- a/pages/index4/settings.wxml
+++ b/pages/index4/settings.wxml
@@ -1,9 +1,11 @@
 <!--pages/index4/settings.wxml-->
 <!-- 需要做背词量的设置（新学与复习） -->
 
+<!-- 这边修改的时候需要同时修改后端 （要改本地缓存吗？一致性问题） -->
+
 <view class="cu-form-group margin-top">
   <view class="title">每天学习的新词数量</view>
-  <picker bindchange="PickerChange" value="{{index}}" range="{{picker}}">
+  <picker bindchange="PickerChange" value="{{}}" range="{{picker}}">
     <view class="picker">
       {{index?picker[index]:'请选择适合自己的学习量哦'}}
     </view>
