--- a/custom-tab-bar/index.wxss
+++ b/custom-tab-bar/index.wxss
@@ -3,7 +3,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 60px;
+  height: 120rpx;
   background: white;
   display: flex;
   padding-bottom: env(safe-area-inset-bottom);
@@ -15,7 +15,7 @@
   left: 0;
   top: 0;
   width: 100%;
-  height: 1px;
+  height: 1rpx;
   transform: scaleY(0.5);
 }
 
@@ -29,10 +29,10 @@
 }
 
 .tab-bar-item cover-image {
-  width: 27px;
-  height: 27px;
+  width: 60rpx;
+  height: 60rpx;
 }
 
 .tab-bar-item cover-view {
-  font-size: 10px;
+  font-size: 25rpx;
 }
