--- a/pages/index/searchResult.wxss
+++ b/pages/index/searchResult.wxss
@@ -23,10 +23,7 @@
 .word-intro{
   display: flex;
   padding: 20rpx;
-}
-.one-word{
-  display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
 }
 .matts{
@@ -52,6 +49,18 @@
 
 .pronunciation{
   font-size: 30rpx; 
+  margin-left: 30rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+}
+
+.pronList{
+  display: flex;
+}
+
+.pronList text{
+  margin: 0 10rpx;
 }
 
 /* ================= */
@@ -61,6 +70,7 @@
   display: flex;
   flex-direction: column;
   padding: 50rpx;
+  border-top: solid 1 grey;
 }
 .one-explaination{
   display: flex;
@@ -87,4 +97,8 @@
 }
 .one-sentense>text{
   font-size: 30rpx;
+}
+
+.sentence{
+  float: right;
 }
