zyz_v5.27 添加了全局变量的设置，现在userID 与用户的信息已经放置在app.globalData 中，可以获取。 1、“一句”页接口基本完成，联想部分有待优化。 2、”一句“屏幕响应式设计完成，如果大家扫码有问题跟我说一下。 3、收藏与”个人“页面的练习还没有做，文章的跳转还没有解决。

--- a/pages/index/search.wxml
+++ b/pages/index/search.wxml
@@ -11,15 +11,15 @@
 </view>
 <view class='search-bottom'>
   <!-- 联想数据 -->
-  <view class="cu-list menu search-hint" wx:if="{{inputText.length > 0}}">
+  <!-- <view class="cu-list menu search-hint" wx:if="{{inputText.length > 0}}">
     <view class="cu-item" wx:for="{{searchHintList}}" wx:key bindtap="onPressHint" data-index="{{index}}">
       <view class="content">
         <text class="text-black">{{item}}</text>
       </view>
     </view>
-  </view>
+  </view> -->
   <!-- 历史数据 -->
-  <view class="cu-list menu search-history" wx:else="{{inputText.length == 0}}">
+  <view class="cu-list menu search-history">
     <view class="cu-item history-list" wx:for="{{searchHistoryList}}" wx:key>
       <view class="content" bindtap="onPressHistory" data-index="{{index}}">
         <text class="text-black">{{item}}</text>
