wait for canvas

--- a/pages/index4/favor.wxml
+++ b/pages/index4/favor.wxml
@@ -15,8 +15,10 @@
   <!-- 
       还是从后端请求，后端需要先在数据库上投影
    -->
+
+   
   <block wx:if="{{TabCur==0}}">
-    <block wx:for="{{yijuList}}">
+    <block wx:for="{{favors.yiju}}">
       <navigator open-type="navigate" hover-class='navigator-hover' url="/pages/index/article?cardCur=0">
         <view class="cu-bar bg-white solid-bottom margin-top">
           <view class="action">
@@ -26,7 +28,7 @@
         </view>
         <view class="padding bg-white">
           <view class="flex flex-wrap">
-            <view class="swiper-item-preview">{{item.article}}</view>
+            <view class="swiper-item-preview">{{item.intro}}</view>
           </view>
         </view>
       </navigator>
@@ -34,7 +36,7 @@
   </block>
 
   <block wx:if="{{TabCur==1}}">
-    <block wx:for="{{learn}}">
+    <block wx:for="{{favors.learn}}">
       <navigator open-type="navigate" hover-class='navigator-hover' url="/pages/index/article?cardCur=0">
         <view class="cu-bar bg-white solid-bottom margin-top">
           <view class="action">
@@ -43,21 +45,32 @@
             <!-- <text text-align='right'>{{item.from_which}}</text> -->
           </view>
         </view>
-        <!-- <view class="padding bg-white">
+        <view class="padding bg-white">
           <view class="flex flex-wrap">
-            <view class="swiper-item-preview">出自《{{item.from_which}}》</view>
+            <view class="swiper-item-preview">{{ item.meaning }}</view>
           </view>
-        </view> -->
+        </view>
       </navigator>
     </block>
   </block>
 
+  
   <block wx:if="{{TabCur==2}}">
-    字典收藏
-    <button wx:for="{{vocab}}">
+    <view class="margin-top">
+    </view>
+    <!-- <button wx:for="{{vocab}}">
       <view class="flex-wrp" style="flex-direction:row;">
         <view class="flex-item bc_green">{{item.name}} "出自" {{item.from_which}}</view>
       </view>
-    </button>
+    </button> -->
+    <block wx:for="{{favors.vocab}}">
+      <navigator open-type="navigate" hover-class='navigator-hover' url="/pages/index/article?cardCur=0">
+        <view class="cu-bar bg-white solid-bottom">
+          <view class="action">
+            <text class="cuIcon-title left">{{item.name}} \n</text>
+          </view>
+        </view>
+      </navigator>
+    </block>
   </block>
 </view>
