--- a/pages/index/article.wxml
+++ b/pages/index/article.wxml
@@ -2,9 +2,9 @@
 <view class="cu-card dynamic">
   <view class="cu-item shadow">
     <view class='article-top'>
-      <view class='article-title'>{{articleInfo.title}}</view>
+      <view class='article-title'>《{{articleInfo.title}}》</view>
       <view>
-        <text class="favor {{articleInfo.like?'icon-favorfill':'icon-favor'}}" bindtap="clickFavor"></text>
+        <!-- <text class="favor {{articleInfo.like?'icon-favorfill':'icon-favor'}}" bindtap="clickFavor"></text> -->
         <text class="share icon-upload" bindtap="clickFavor"></text>
       </view>
     </view>
