--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -17,12 +17,10 @@
     <swiper-item wx:for="{{swiperList}}" wx:key class="{{cardCur==index?'cur':''}}">
       <view class="swiper-item">
         <view class='swiper-item-top'>
-          <view class="swiper-item-calen">
-            <text class="swiper-item-calen-day">{{item.day}}</text>
-            <view>
-              <text class='swiper-item-calen-week'>{{item.weekday}}</text>
-              <text class='swiper-item-calen-date'>{{item.date}}</text>
-            </view>
+          <view>
+            <view>{{item.date[0]}} 年</view>
+            <text>{{item.date[1]}}月 </text>
+            <text> {{item.date[2]}}日 </text>
           </view>
           <view class="swiper-item-title">
             <view>{{item.title}}</view>
